--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     margin: 0;
-    background-color: lightgrey;
+    background-color: lightsteelblue;
 }
 
 .mastercontainer {
@@ -59,14 +59,86 @@ body {
 .formcontainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 60vw;
     height: 100vh;
 }
 
+.text {
+    display: flex;
+    flex-direction: column;
+}
+
 .form {
-    background-color: 	#F8F0E3;
-    box-shadow: 3px 3px 3px  grey;
+    background-color: 	lightslategrey;
+    box-shadow: 3px 3px 3px  black;
     width: 60vw;
     height: 30vh;
+}
+
+h1, h2 {
+    margin: 16px;
+    margin-left: 50px;
+    font-family: 'norsebold';
+}
+
+h2 {
+
+}
+
+.form p {
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 50px;
+    font-family: 'norsebold'
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+section {
+    display: flex;
+    margin-left: 50px;
+    margin-top: 30px;
+    gap: 50px;
+}
+
+section:first-child {
+    margin-top: 8px;
+}
+
+section div {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    font-size: 1.5rem;
+    font-family: 'norsebold'
+}
+
+input {
+    height: 25px;
+    width: 500px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+button {
+    margin-top: 90px;
+    margin-left: 50px;
+    width: 250px;
+    height: 75px;
+    border: none;
+    border-radius: 10px;
+    font-family: 'norsebold';
+    font-size: 32px;
+    background-color: lightslategray;
+    box-shadow: 3px 3px 3px black;
+}
+
+a {
+    text-decoration: none;
 }
