--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 .overlay p {
-    font-family: 'norsebold';
+    font-family: 'norsebold', sans-serif;
     font-size: 100px;
     color: ghostwhite;
 }
@@ -74,23 +74,22 @@ body {
     box-shadow: 3px 3px 3px  black;
     width: 60vw;
     height: 30vh;
+    min-height: 361.5px;
+    min-width: 1080px;
 }
 
-h1, h2 {
+.text p {
     margin: 16px;
     margin-left: 50px;
-    font-family: 'norsebold';
-}
-
-h2 {
-
+    font-family: 'norsebold', sans-serif;
+    font-size: 50px;
 }
 
 .form p {
     font-size: 24px;
     font-weight: bold;
     margin-left: 50px;
-    font-family: 'norsebold'
+    font-family: 'norsebold', sans-serif;
 }
 
 form {
@@ -116,14 +115,27 @@ section div {
 
 label {
     font-size: 1.5rem;
-    font-family: 'norsebold'
+    font-family: 'norsebold', sans-serif;
+    margin-bottom: 3px;
 }
 
 input {
     height: 25px;
     width: 500px;
-    border: 2px solid black;
+    border: none;
     border-radius: 5px;
+}
+
+input:focus {
+    outline: solid;
+    outline-width: medium;
+    
+}
+
+input:valid {
+    outline: solid;
+    outline-width: medium;
+    outline-color: green;
 }
 
 button {
@@ -133,12 +145,133 @@ button {
     height: 75px;
     border: none;
     border-radius: 10px;
-    font-family: 'norsebold';
+    font-family: 'norsebold', sans-serif;
     font-size: 32px;
     background-color: lightslategray;
     box-shadow: 3px 3px 3px black;
 }
 
+button:hover {
+    box-shadow: 5px 5px 5px white;
+    color: white;
+}
+
 a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 480px) {
+    .mastercontainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mainimg {
+        width: 100vw;
+        height: 20vh;
+    }
+
+    .mainimg img {
+        width: 100vw;
+        height: 20vh;
+    }
+
+    .overlay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 65px;
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 100vw;
+        height: 6vh;
+    }
+
+    .overlay img {
+        width: 50px;
+        height: 100px;
+    }
+    
+    .overlay p {
+        font-family: 'norsebold', sans-serif;
+        font-size: 60px;
+        color: ghostwhite;
+    }
+
+    .container {
+        width: 100vw;
+        height: 20vh;
+        overflow: hidden;
+    }
+
+    h1, h2 {
+        text-align: center;
+        margin-left: 20px;
+    }
+
+    .formcontainer {
+        position: relative;
+        top: 95px;
+        justify-content: space-evenly;
+        width: 100vw;
+        height: 60vh;
+    }
+
+    .form {
+        width: 100vw;
+        height: 30vh;
+        min-width: 100vw;
+        min-height: 560px;
+    }
+
+    .form p {
+        text-align: center;
+        margin: 0;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        gap: 0;
+    }
+
+    section div {
+        gap: 10px;
+    }
+
+    label {
+        text-align: center;
+        margin: 0;
+        margin-bottom: 5px;
+        margin-top: 15px;
+        
+    }
+
+    input {
+        height: 25px;
+        width: 70vw;
+        border: none;
+        border-radius: 5px;
+        align-items: center;
+    }
+
+    button {
+        align-self: center;
+        margin-left: 0;
+    }
+
+    .text p {
+        font-size: 24px;
+        text-align: center;
+        margin: 0;
+        margin-top: 15px;
+    }
 }
